fix sonar issue and implement junitest for NotifyDeliveryPushAction